--- a/install_prometheus.yml
+++ b/install_prometheus.yml
@@ -1,88 +1,72 @@
 ---
-- name: Install and Configure Prometheus
+- name: Install Prometheus on Ubuntu
   hosts: "{{ target_hosts }}"
   become: true
-
   vars:
-    prometheus_version: "2.44.0"
+    prometheus_version: "2.51.2"
     prometheus_user: "prometheus"
     prometheus_group: "prometheus"
     prometheus_install_dir: "/usr/local/bin"
     prometheus_config_dir: "/etc/prometheus"
     prometheus_data_dir: "/var/lib/prometheus"
     prometheus_service_file: "/etc/systemd/system/prometheus.service"
-
+  
   tasks:
-    - name: Update apt cache
+    - name: Update APT cache
       apt:
         update_cache: yes
 
-    - name: Install prerequisite packages
+    - name: Install required packages
       apt:
         name:
           - wget
           - tar
+          - curl
         state: present
-
-    - name: Create Prometheus group
-      group:
-        name: "{{ prometheus_group }}"
-        system: yes
 
     - name: Create Prometheus user
       user:
         name: "{{ prometheus_user }}"
-        group: "{{ prometheus_group }}"
-        shell: /sbin/nologin
-        system: yes
+        shell: "/sbin/nologin"
+        create_home: no
 
-    - name: Create necessary directories
+    - name: Create Prometheus directories
       file:
         path: "{{ item }}"
         state: directory
         owner: "{{ prometheus_user }}"
         group: "{{ prometheus_group }}"
+        mode: '0755'
       loop:
         - "{{ prometheus_config_dir }}"
         - "{{ prometheus_data_dir }}"
 
     - name: Download Prometheus
       get_url:
-        url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz"
-        dest: "/tmp/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz"
+        url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}-linux-amd64.tar.gz"
+        dest: "/tmp/prometheus.tar.gz"
 
-    - name: Extract Prometheus
-      unarchive:
-        src: "/tmp/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz"
-        dest: "/tmp/"
+    - name: Extract Prometheus archive
+      ansible.builtin.unarchive:
+        src: "/tmp/prometheus.tar.gz"
+        dest: "/tmp"
         remote_src: yes
 
-    - name: Install Prometheus binaries
-      copy:
-        src: "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/{{ item }}"
-        dest: "{{ prometheus_install_dir }}/{{ item }}"
+    - name: Move Prometheus binaries
+      command: mv /tmp/prometheus-{{ prometheus_version }}-linux-amd64/prometheus /tmp/prometheus-{{ prometheus_version }}-linux-amd64/promtool {{ prometheus_install_dir }}
+    
+    - name: Set permissions for Prometheus binaries
+      file:
+        path: "{{ item }}"
+        owner: "{{ prometheus_user }}"
+        group: "{{ prometheus_group }}"
         mode: '0755'
       loop:
-        - prometheus
-        - promtool
+        - "{{ prometheus_install_dir }}/prometheus"
+        - "{{ prometheus_install_dir }}/promtool"
 
-    - name: Copy console libraries
-      copy:
-        src: "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/consoles"
-        dest: "{{ prometheus_config_dir }}/consoles"
-        owner: "{{ prometheus_user }}"
-        group: "{{ prometheus_group }}"
-        mode: '0755'
-        remote_src: yes
-
-    - name: Copy console templates
-      copy:
-        src: "/tmp/prometheus-{{ prometheus_version }}.linux-amd64/console_libraries"
-        dest: "{{ prometheus_config_dir }}/console_libraries"
-        owner: "{{ prometheus_user }}"
-        group: "{{ prometheus_group }}"
-        mode: '0755'
-        remote_src: yes
+    - name: Move Prometheus config files
+      command: mv /tmp/prometheus-{{ prometheus_version }}-linux-amd64/consoles /tmp/prometheus-{{ prometheus_version }}-linux-amd64/console_libraries {{ prometheus_config_dir }}
 
     - name: Copy Prometheus configuration file
       template:
@@ -93,29 +77,10 @@
         mode: '0644'
 
     - name: Create Prometheus systemd service file
-      copy:
+      template:
+        src: prometheus.service.j2
         dest: "{{ prometheus_service_file }}"
-        content: |
-          [Unit]
-          Description=Prometheus Monitoring
-          Wants=network-online.target
-          After=network-online.target
-
-          [Service]
-          User={{ prometheus_user }}
-          Group={{ prometheus_group }}
-          Type=simple
-          ExecStart={{ prometheus_install_dir }}/prometheus \
-            --config.file={{ prometheus_config_dir }}/prometheus.yml \
-            --storage.tsdb.path={{ prometheus_data_dir }} \
-            --web.console.templates={{ prometheus_config_dir }}/consoles \
-            --web.console.libraries={{ prometheus_config_dir }}/console_libraries
-
-          [Install]
-          WantedBy=multi-user.target
-      owner: root
-      group: root
-      mode: '0644'
+        mode: '0644'
 
     - name: Reload systemd daemon
       systemd:
