--- a/install_prometheus.yml
+++ b/install_prometheus.yml
@@ -43,7 +43,7 @@
 
     - name: Download Prometheus
       get_url:
-        url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}-linux-amd64.tar.gz"
+        url: "https://github.com/prometheus/prometheus/releases/download/v{{ prometheus_version }}/prometheus-{{ prometheus_version }}.linux-amd64.tar.gz"
         dest: "/tmp/prometheus.tar.gz"
 
     - name: Extract Prometheus archive
